deploymentfile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-job
spec:
  selector:
    matchLabels:
      app: deploment-app
  replicas: 2 # deployment to run 2 pods 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: deploymrnt-app
    spec:
      containers:
      - name: deployment-job
        image: deployment-image
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
