ingress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
   <none>
spec:
  ingressClassName: app-example
  rules:
  - http:
      paths:
      - path: /apppath
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8080
